update HTML CSS

--- a/joonwon_csv.html
+++ b/joonwon_csv.html
@@ -14,17 +14,44 @@
 		<div class='body'>
 			<div class="topicbox">
 				<span class="topic">Education</span>
-				<span class="description">Sejong university, Seoul, Korea</span>
-				<span class="description">Double major in Hotel&Toursim Managment and Data Science</span>
-				<span class="description">GPA : 4.30</span>
+				<p class = "description">
+					Sejong university, Seoul, Korea<br>
+					Double major in Hotel&Toursim Managment and Data Science <br>
+					GPA : 4.30
+				</p>
 			</div>
 			<div class="topicbox">
 				<span class="topic">Skills</span>
-				<span class="sub_topic">Technical</span>	
+				<span class="sub_topic">Technical</span>
+				<p class="description"> 
+					Programmming Languages - python, R <br>
+					Datamining - numpy, pandas, sklearn <br>
+					Machine Learning - tensorflow, pytorch, keras <br>
+					NLP - Transformers <br>
+					Others - Git & Github
+				</p>	
 				<span class="sub_topic">Language</span>
+				<p class="description">
+					TOEIC 890 <br>
+					KOREAN Native
+				</p>
 			</div>
 			<div class="topicbox">
 				<span class="topic">Experience</span>
+				<span class="sub_topic">Location Routing Problem in Tire Manufacturing Company</span>
+				<ul>
+					<li>Crawling warehouse and retail store coordinates with Google geocoding api</li>
+					<li>Select optimal storage location and route to minimize cost</li>
+				</ul>	
+				<span class="sub_topic">Monetary Policy Board Announcement Analysis (python)</span>
+				<ul>
+					<li>preprocessed Monetary Policy Board announcement text data</li>
+					<li>perform base analysis with TF-IDF Embedding, LDA, and ML Models (RF, SVM)</li>
+				</ul>
+
+				<span class="sub_topic">Fake News Detection with Attention based LSTM model</span>
+
+				<span class="sub_topic">Fake News Detection with Graph Neural Network based model</span>
 			</div>
 			<div class="topicbox">
 				<span class="topic">Awards</span>
