update HTML CSS

--- a/joonwon_csv.html
+++ b/joonwon_csv.html
@@ -28,7 +28,7 @@
 					Datamining - numpy, pandas, sklearn <br>
 					Machine Learning - tensorflow, pytorch, keras <br>
 					NLP - Transformers <br>
-					Others - Git & Github
+					Others - Git & Github, Linux
 				</p>	
 				<span class="sub_topic">Language</span>
 				<p class="description">
@@ -46,18 +46,38 @@
 				<span class="sub_topic">Monetary Policy Board Announcement Analysis (python)</span>
 				<ul>
 					<li>preprocessed Monetary Policy Board announcement text data</li>
-					<li>perform base analysis with TF-IDF Embedding, LDA, and ML Models (RF, SVM)</li>
+					<li>perform EDA with TF-IDF Embedding, LDA, and ML Models (RF, SVM)</li>
 				</ul>
-
 				<span class="sub_topic">Fake News Detection with Attention based LSTM model</span>
-
+				<ul>
+					<li>define incongruent headline news as our fake news problem</li>
+					<li>use auxilary information to detect fake news</li>
+					<li>build hierarchical lstm model with attention mechanism</li>
+				</ul>
 				<span class="sub_topic">Fake News Detection with Graph Neural Network based model</span>
 			</div>
 			<div class="topicbox">
 				<span class="topic">Awards</span>
+				<p class="description">
+					Academic Excellence Scholarship, Spring 2017(2nd prize) <br>
+					Academic Excellence Scholarship, Fall 2017 (1st prize) <br>
+					Academic Excellence Scholarship Spring 2018 sem (2nd prize)
+				</p>
+			</div>
+			<div class="topicbox">
+				<span class="topic">Activities</span>
+				<span class="sub_topic">International Students</span>
+				<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
+				<span class="sub_topic">M&L</span>
+				<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
+				<span class="sub_topic">WeMajor</span>
+				<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
 			</div>
 			<div class="topicbox">
 				<span class="topic">Related Courses</span>
+			</div>
+			<div class="topicbox">
+				<span class="topic">Related Study</span>
 			</div>
 		</div>
 		<footer>
