update html and CSS

--- a/joonwon_csv.html
+++ b/joonwon_csv.html
@@ -10,76 +10,95 @@
 
 	<body>
 		<header> JOONWON JANG </header>
-		<address> </address>
-		<div class='body'>
-			<div class="topicbox">
-				<span class="topic">Education</span>
-				<p class = "description">
-					Sejong university, Seoul, Korea<br>
-					Double major in Hotel&Toursim Managment and Data Science <br>
-					GPA : 4.30
-				</p>
+		<main>
+			<div class='body'>
+				<div class="topicbox">
+					<span class="topic">Education</span>
+					<p class = "description">
+						Sejong university, Seoul, Korea<br>
+						Double major in Hotel&Toursim Managment (and Data Science) <br>
+						GPA : X.XX
+					</p>
+				</div>
+				<div class="topicbox">
+					<span class="topic">Skills</span>
+					<span class="sub_topic">Technical</span>
+					<p class="description"> 
+						Programmming Languages - python, R <br>
+						Datamining - numpy, pandas, sklearn, matplotlib <br>
+						Machine Learning - tensorflow, pytorch, keras <br>
+						Natural Language Processing - transformers, gensim, nltk <br>
+						Others - Git & Github, Linux
+					</p>	
+					<span class="sub_topic">Language</span>
+					<p class="description">
+						TOEIC 890 <br>
+						KOREAN Native
+					</p>
+				</div>
+				<div class="topicbox">
+					<span class="topic">Experience</span>
+					<span class="sub_topic">Location Routing Problem in Tire Manufacturing Company (python, cplex)</span>
+					<ul>
+						<li>Crawling warehouse and retail store coordinates with Google geocoding api</li>
+						<li>Select optimal storage location and routing to minimize cost</li>
+					</ul>	
+					<span class="sub_topic">Monetary Policy Board Announcement Analysis (python)</span>
+					<ul>
+						<li>preprocess Monetary Policy Board announcement text data</li>
+						<li>perform EDA with TF-IDF Embedding, LDA, and ML Models (RF, SVM)</li>
+					</ul>
+					<span class="sub_topic">Fake News Detection with Attention based LSTM model and BERT (python)</span>
+					<ul>
+						<li>define incongruent headline news as our fake news problem</li>
+						<li>build and release 400K fake news dataset</li>
+						<li>use auxilary information to detect fake news</li>
+						<li>build hierarchical lstm model with attention mechanism (tensorflow)</li>
+						<li>add additional input embedding to BERT to recognize auxilary information (pytorch)</li>
+					</ul>
+					<span class="sub_topic">Fake News Detection with Graph Neural Network based model</span>
+					<ul>
+						<li>in-progress</li>
+					</ul>
+				</div>
+				<div class="topicbox">
+					<span class="topic">Awards</span>
+					<p class="description">
+						Academic Excellence Scholarship, Spring 2017 (2nd prize) <br>
+						Academic Excellence Scholarship, Fall 2017 (1st prize) <br>
+						Academic Excellence Scholarship, Spring 2018 sem (2nd prize) <br>
+						Marketing Strategies to Attract Vietnam Tourists, in campus contest in 2017 (3rd prize)
+					</p>
+				</div>
+				<div class="topicbox">
+					<span class="topic">Activities</span>
+					<span class="sub_topic">International Students</span>
+					<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
+					<span class="sub_topic">M&L</span>
+					<span class="description">in-campus contest participating club (2017-2019)</span>
+					<span class="sub_topic">WeMajor - lecturing volunteering</span>
+					<span class="description">Give lecture about my major to high school students (2018-2019)</span>
+				</div>
+				<div class="topicbox">
+					<span class="topic">Related Courses</span>
+					<ul>
+						<li>Service Scheduling (Operation Research)</li>
+						<li>Advanced Python Programming and Lab</li>
+					</ul>
+				</div>
+				<div class="topicbox">
+					<span class="topic">Related Study</span>
+					<ul>
+						<li>CS224n: Natural Language Processing with Deep Learning - Stanford Open Course (Lab Seminar, 2020 Summer)</li>
+						<li>Paper Seminar based on Natural Language Processing (Lab Seminar, 2020 Summer ~ )</li>
+						<li>Probability and Statistics for Programmers (Lab Seminar, 2020 Winter)</li>
+						<li>Linear Algegra for Programmers (Lab Seminar, 2020 Winter)</li>
+						<li>Transformers for Natural Language Processing (Lab Seminar, 2021 Spring)</li>
+						<li>AIops (Lab Seminar, 2021 Summer)</li>
+					</ul>
+				</div>
 			</div>
-			<div class="topicbox">
-				<span class="topic">Skills</span>
-				<span class="sub_topic">Technical</span>
-				<p class="description"> 
-					Programmming Languages - python, R <br>
-					Datamining - numpy, pandas, sklearn <br>
-					Machine Learning - tensorflow, pytorch, keras <br>
-					NLP - Transformers <br>
-					Others - Git & Github, Linux
-				</p>	
-				<span class="sub_topic">Language</span>
-				<p class="description">
-					TOEIC 890 <br>
-					KOREAN Native
-				</p>
-			</div>
-			<div class="topicbox">
-				<span class="topic">Experience</span>
-				<span class="sub_topic">Location Routing Problem in Tire Manufacturing Company</span>
-				<ul>
-					<li>Crawling warehouse and retail store coordinates with Google geocoding api</li>
-					<li>Select optimal storage location and route to minimize cost</li>
-				</ul>	
-				<span class="sub_topic">Monetary Policy Board Announcement Analysis (python)</span>
-				<ul>
-					<li>preprocessed Monetary Policy Board announcement text data</li>
-					<li>perform EDA with TF-IDF Embedding, LDA, and ML Models (RF, SVM)</li>
-				</ul>
-				<span class="sub_topic">Fake News Detection with Attention based LSTM model</span>
-				<ul>
-					<li>define incongruent headline news as our fake news problem</li>
-					<li>use auxilary information to detect fake news</li>
-					<li>build hierarchical lstm model with attention mechanism</li>
-				</ul>
-				<span class="sub_topic">Fake News Detection with Graph Neural Network based model</span>
-			</div>
-			<div class="topicbox">
-				<span class="topic">Awards</span>
-				<p class="description">
-					Academic Excellence Scholarship, Spring 2017(2nd prize) <br>
-					Academic Excellence Scholarship, Fall 2017 (1st prize) <br>
-					Academic Excellence Scholarship Spring 2018 sem (2nd prize)
-				</p>
-			</div>
-			<div class="topicbox">
-				<span class="topic">Activities</span>
-				<span class="sub_topic">International Students</span>
-				<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
-				<span class="sub_topic">M&L</span>
-				<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
-				<span class="sub_topic">WeMajor</span>
-				<span class="description">Department of Hotel Managment, Hong Kong Polytechnic university (Fall 2018)</span>
-			</div>
-			<div class="topicbox">
-				<span class="topic">Related Courses</span>
-			</div>
-			<div class="topicbox">
-				<span class="topic">Related Study</span>
-			</div>
-		</div>
+		</main>
 		<footer>
 			<span> E-mail :
 				<a href="mailto:kaoara@naver.com">kaoara@naver.com</a>
