--- a/joonwon_cv.html
+++ b/joonwon_cv.html
@@ -17,7 +17,7 @@
 					<p class = "description">
 						Sejong university, Seoul, Korea<br>
 						Double major in Hotel&Toursim Managment (and Data Science) <br>
-						GPA : X.XX
+						GPA : 4.30
 					</p>
 				</div>
 				<div class="topicbox">
